# d-ai-maf-observability

./: .gitignore  AGENTS.md  OBSERVABILITY_FIXES.md  README.md  test_apis.py
charts/: README.md
charts/maf_demo/: Chart.yaml  values.yaml
charts/maf_demo/templates/: _helpers.tpl  agent-deployment.yaml  api-tool-deployment.yaml  aspire-dashboard-anon.yaml  aspire-dashboard.yaml  clusterissuer.yaml  ingress.yaml  mcp-tool-deployment.yaml  otel-collector.yaml  services.yaml
dashboards/: appinsights-agent-traces.json  prometheus-agent-metrics.json
docs/: ANONYMIZATION.md  COMMON_ERRORS.md  DESIGN.md  IMPLEMENTATION_LOG.md  MCP_TRACE_CONTEXT_ANALYSIS.md
infra/: .gitignore  README.md  acr.tf  ai_services.tf  aks.tf  build_script.tf  grafana_dashboards.tf  helm.demo.tf  helm.langfuse.tf  helm.nginx.tf  monitoring.tf  networking.tf  outputs.tf  providers.tf  public_ip.tf  rbac.tf  resource_group.tf  terraform.tfvars.example  tfplan  variables.tf
infra/templates/: build_script.env.tpl
scripts/: README.md  build_and_push.py  pyproject.toml
src/agent/: .env.example  Dockerfile  README.md  adhoc_test_maf_with_fas.py  main.py  main_direct.py  pyproject.toml
src/agent/scenarios/: __init__.py  local_maf.py  local_maf_multiagent.py  maf_with_fas.py
src/api_server/: .env.example  Dockerfile  README.md  main.py  pyproject.toml
src/mcp_server/: .env.example  README.md  main.py  pyproject.toml
