[project]
name = "agent"
version = "0.1.0"
description = "MAF Agent with Foundry Service and Direct Model variants"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agent-framework",
    "azure-identity>=1.21.1",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.0",
    "fastmcp>=2.0.0",
    "aiohttp>=3.13.1",
    "opentelemetry-api>=1.30.0",
    "opentelemetry-sdk>=1.30.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.30.0",
    "opentelemetry-instrumentation-httpx>=0.51b0",
    "opentelemetry-instrumentation-aiohttp-client>=0.51b0",
    "pydantic>=2.0.0",
]

[tool.uv]
prerelease = "allow"
