[project]
name = "agent"
version = "0.1.0"
description = "MAF Agent with Foundry Service and Direct Model variants"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agent-framework>=0.5.0",
    "azure-identity>=1.18.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.0",
    "aiohttp>=3.13.1",
    "fastmcp>=0.6.0",
    "opentelemetry-api>=1.30.0",
    "opentelemetry-sdk>=1.30.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.30.0",
    "opentelemetry-instrumentation-httpx>=0.51b0",
    "opentelemetry-instrumentation-aiohttp-client>=0.51b0",
    "opentelemetry-instrumentation-logging>=0.51b0",
]

[tool.uv]
prerelease = "allow"
